Sidebar spacing fixes
Fixed sidebar spacing so that things vertically aligned.
Also solves the problem of a mobile horizontal scroll bar appearing because of the `g-0` class.
Changed the column sizes to match the same sizes as layout builder sidebars.
Finally fixed alignment of multi-column layoutbuilders + a sidebar. Though this should be a rare case, the new changes make it so all the content aligns as expected.

--- a/css/layout-builder-styles.css
+++ b/css/layout-builder-styles.css
@@ -337,6 +337,10 @@
   --bs-gutter-x: 0;
 }
 
+.ucb-sidebar-container .ucb-contained-row {
+  --bs-gutter-x: 0;
+}
+
 /*** !important needed to override inline background image styles ***/
 
 .scrolling-background {
